--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   calendar_timeline: ^1.0.5
+  cloud_firestore: ^3.4.3
+  firebase_core: ^1.20.0
+  provider: ^6.0.3
+  flutter_slidable: ^2.0.0
+
+
 
 dev_dependencies:
   flutter_test:
